feat(exception): cria exceção CleanTempraryFileException e implementa para tratar erros de falha de limpeza de arquivos do diretorio temporario.