@@ -1,12 +1,12 @@
 package com.tomazbr9.pdfily.service;
 
+import com.tomazbr9.pdfily.exception.ClearTemporaryFilesException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -25,10 +25,11 @@ public class TempFileCleanupService {
     public void cleanTempFiles(){
         try {
 
-            Path dirPath = Paths.get(uploadDir);
+            Path dirPath = Path.of(uploadDir);
 
             if(!Files.exists(dirPath)) return;
 
+            // lista todos os arquivos dentro do diretorio temporario e filtra cada um.
             Files.list(dirPath)
                     .filter(Files::isRegularFile)
                     .filter(this::isExpired)
@@ -36,10 +37,12 @@ public class TempFileCleanupService {
         }
         catch(IOException error){
             logger.error("Erro ao limpar arquivos temporários", error);
+            throw new ClearTemporaryFilesException("Erro ao limpar arquivos temporários.");
         }
     }
 
     private boolean isExpired(Path filePath){
+        // Obtem o time da ultima modificação do arquivo, subtrai, divide e compara para identificar se pode limpar.
         try {
             FileTime lastModifiedTime = Files.getLastModifiedTime(filePath);
             long ageInMinutes = (System.currentTimeMillis() - lastModifiedTime.toMillis() / (1000 * 60));
@@ -52,6 +55,7 @@ public class TempFileCleanupService {
     }
 
     private void deleteFileSafely(Path filePath){
+        // Limpa os arquivos ja expirados
         try {
             Files.deleteIfExists(filePath);
             logger.info("Arquivo temporário removido: {}", filePath.getFileName());
